# rl-basics-cpp

./: CMakeLists.txt  DerivedDeterministicPolicy.h  DerivedStochasticPolicy.h  FA_QTD.h  FA_TD.h  FunctionApproximator.h  GPI.h  LinearFunctionApproximator.h  MC_FV.h  MDP.h  MDPSolver.h  NStepTD.h  Policy.h  QValuePolicyIteration.cpp  README.md  TD.h  ValueStrategy.h  m_utils.h  main.cpp  run_rl.sh  run_taggame.sh  serialization.h
barto_sutton_exercises/5_1/: Blackjack.h  mc_fv_solution.h  td_solution.h  v-state_estimation.h
barto_sutton_exercises/6_9/: WindyGridworld.cpp  WindyGridworld.h  fa_qtd_solution.h  fa_td_solution.h  nsteptd_solution.h  td_solution.h
taggame/: TagGame.cpp  TagGame.h  fa_td_solution.h  td_solution.h
taggame-java/: pom.xml
taggame-java/natives/: lwjgl64
taggame-java/src/main/java/taggame/: Communicator.java  InMemoryRunner.java  Slick2DTagGame.java  SlickGraphicsRunner.java  TagGame.java  TagPlayer.java
